--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "Japanese OCR to Anki deck builder"
 requires-python = ">=3.12"
 dependencies = [
   "typer>=0.12",
+  "genanki>=0.13",
 ]
 
 [tool.setuptools.packages.find]
