--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
   "typer>=0.12",
   "genanki>=0.13",
+  "pytesseract>=0.3.10",
+  "Pillow>=10.0.0",
 ]
 
 [tool.setuptools.packages.find]
