--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ dependencies = [
   "Pillow>=10.0.0",
 ]
 
+[project.optional-dependencies]
+japanese_nlp = [
+  "fugashi>=1.3.0",
+  "unidic-lite>=1.0.8",
+]
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
