--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ japanese_nlp = [
   "fugashi>=1.3.0",
   "unidic-lite>=1.0.8",
 ]
+manga_ocr = [
+  "manga-ocr>=0.1.14",
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
